# insider_comns

./: Cargo.toml  docker-compose.yml
config/: app.yaml
migrations/2026-03-28-221637-0000_users_tables/: down.sql  up.sql
src/: config.rs  db.rs  lib.rs  main.rs  schema.rs  telemetry.rs
src/app/: mod.rs  router.rs
src/app/state/: state.rs
src/auth/: password.rs
src/errors/: config_error.rs
src/models/: users.rs
