[package]
name = "insider_comns"
version = "0.1.0"
edition = "2024"

[lib]
name = "insider_comms"
path = "src/lib.rs"

[[bin]]
name = "insider_comms"
path = "src/main.rs"

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
hex = "0.4"
jsonwebtoken = "9"
rand = "0.8"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "macros",
    "chrono",
] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1"
diesel = { version = "2.3.0", features = ["postgres", "chrono"] }
diesel-async = { version = "0.7.0", features = ["postgres", "bb8"] }
config = "0.15.22"
deadpool = { version = "0.13.0", features = ["rt_tokio_1"] }
rustls = { version = "0.23.37", default-features = false, features = ["ring"] }
rustls-platform-verifier = { version = "0.6.2", default-features = false }
tokio-postgres-rustls = { version = "0.13.0", default-features = false }
futures-util = "0.3"
tokio-postgres = "0.7"
